welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:4: error: reassignment to val
if (a=b) 
     ^sumDouble:10: error: type mismatch;
 found   : Unit
 required: Integer
sum = 2*(a+b);
    ^sumDouble:8: error: type mismatch;
 found   : Unit
 required: Integer
if (a!=b)
^